crates/backlog-api-macros/tests/ui/form_empty_attribute.stderr
error: #[form] attribute requires arguments. Use #[form(skip)], #[form(name = "...")], #[form(array)], or #[form(date_format = "...")]
 --> tests/ui/form_empty_attribute.rs:6:5
  |
6 |     #[form]
  |     ^
