crates/backlog-api-macros/tests/ui/form_empty_attribute.rs
use backlog_api_macros::ToFormParams;

#[derive(ToFormParams)]
struct EmptyFormAttribute {
    content: String,
    #[form]
    field_with_empty_form: String,
}

fn main() {}
